# Typequest

./: .gitignore  README.md  pyproject.toml  requirements.txt  run-backend.cmd  run-frontend.cmd  vercel.json
api/: index.py
backend/: verify_mcp.py
backend/app/: analysis.py  artifacts.py  main.py  mcp_server.py  models.py  quiz_data.py
data/: persona.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: LikertScale.jsx  ProgressBar.jsx  QuestionCard.jsx  ResultDashboard.jsx
frontend/src/lib/: api.js
