[project]
name = "typequest"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = [
  "fastapi==0.117.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.13.0"
]

[tool.vercel.scripts]
build = "cd frontend && npm install && npm run build && rm -rf ../public && mkdir -p ../public && cp -r dist/* ../public/"
